codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__image_generation_call_history_snapshot.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: combined
---
• 已生成图像：
  └ A tiny blue square
  └ 已保存到：file:///tmp/ig-1.png
