codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__image_preparation_in_progress.snap
---
source: tui/src/chatwidget/tests/composer_submission.rs
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
• 已 排 队 的 后 续 输 入
  ↳ Preparing images: describe
    shift + ← 编 辑 最 后 一 条 排 队 消 息

› x

  GPT-5.6-Sol 默 认  · /tmp/project
