codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__manual_thread_name_status_surfaces.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: "normalize_snapshot_paths(format!(\"transcript:\\n{transcript}\\nfooter:\\n{footer}\\ntitle: {title}\"))"
---
transcript:

footer:
› Ask Codex to do anything

  GPT-5.6-Sol 默 认  · /tmp/project · review-fix
title: review-fix | project
